--- a/recipes/One-Pot Spaghetti with Meat Sauce.html
+++ b/recipes/One-Pot Spaghetti with Meat Sauce.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One-Pot Spaghetti with Meat Sauce</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>One-Pot Spaghetti with Meat Sauce</h1>
